src/objects/Liability__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Remarks__c</fullName>
        <label>Additional Remarks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Mandatory if Real Estate Schedule is selected in the category</description>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alimony_Type__c</fullName>
        <label>Alimony Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alimony</fullName>
                </value>
                <value>
                    <fullName>Child Support</fullName>
                </value>
                <value>
                    <fullName>Separation Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Must be greater than 0</description>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Hazard_Insurance__c</fullName>
        <label>Annual Hazard Insurance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_If_Title_is_also_Held_As__c</fullName>
        <label>Check If Title is also Held As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
                <value>
                    <fullName>Revocable Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Mandatory if Real Estate Schedule is selected in the category</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condominium_FHA_Approved__c</fullName>
        <label>Condominium FHA Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Must have only digits or can have one hyphen(-)</description>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Rental_Income__c</fullName>
        <label>Gross_Rental_Income</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Monthly_Dues__c</fullName>
        <label>HOA Monthly Dues</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Taxes_etc__c</fullName>
        <label>Insurance_Taxes_etc</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsJoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsJoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Liability_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Liability Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Expense_Type__c</fullName>
        <label>Job Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Job related Expense</fullName>
                </value>
                <value>
                    <fullName>Other expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Related_Expenses__c</fullName>
        <description>Vale must be greater than Zero</description>
        <label>Job Related Expenses</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Description_of_Property__c</fullName>
        <label>Legal Description of Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability_Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alimony</fullName>
                </value>
                <value>
                    <fullName>Job Expense</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Real Estate Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liability_Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liability_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Liability_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Divorce</fullName>
                </value>
                <value>
                    <fullName>Child Support</fullName>
                </value>
                <value>
                    <fullName>Separate Maintenance.</fullName>
                </value>
                <value>
                    <fullName>Job Related Expenses</fullName>
                </value>
                <value>
                    <fullName>Other expense</fullName>
                </value>
                <value>
                    <fullName>Collections/Judgements/Liens</fullName>
                </value>
                <value>
                    <fullName>Home Equity Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Lease Payments</fullName>
                </value>
                <value>
                    <fullName>Mortgage Loans</fullName>
                </value>
                <value>
                    <fullName>Open 30 day Charge Accounts</fullName>
                </value>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>Mechnic Lien</fullName>
                </value>
                <value>
                    <fullName>Property Taxes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liability_Unpaid_Balance__c</fullName>
        <label>Unpaid Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liability_willBeClosed_by_paying__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if the Liability will be paid by closing this alimony</inlineHelpText>
        <label>Liability wil be closed by Payin Alimony</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liability_will_be_closed_by_Paying_RES__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if Liability will be closed by paying the RES money.</inlineHelpText>
        <label>Liability will be closed by Paying RES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liability_will_be_closed_by_payingThis__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if the liability will be closed by paying this expense</inlineHelpText>
        <label>Liability will be closed by Paying this</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liability_will_be_closed_by_paying__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if the Liability will be closed by paying this</inlineHelpText>
        <label>Liability will be closed by Paying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Flood_Insurance_Premium__c</fullName>
        <label>Monthly Flood Insurance Premium</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Ground_Rents_Amount__c</fullName>
        <label>Monthly Ground Rents Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_PUD_Fees_Amount__c</fullName>
        <label>Monthly PUD Fees Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_Liens__c</fullName>
        <description>Must be greater than 0</description>
        <label>Mortgage &amp; Liens</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_Payments__c</fullName>
        <description>Must be greater than 0</description>
        <label>Mortgage Payments</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Company__c</fullName>
        <description>Mandatory if Real Estate Schedule is selected in the category</description>
        <label>Name of Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Rental_Income_RealEstate__c</fullName>
        <description>Must be greater than 0</description>
        <label>Net Rental Income</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Expense__c</fullName>
        <label>Other_Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payments_Owed_to__c</fullName>
        <label>Payments Owed to</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present_Mortgage_Value__c</fullName>
        <description>Must be greater than 0</description>
        <label>Present Market Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Address2__c</fullName>
        <label>Property_Address2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <label>Property_Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property_City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <label>Property County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Held_as__c</fullName>
        <label>Property Held as</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fee Simple</fullName>
                </value>
                <value>
                    <fullName>Leasehold</fullName>
                </value>
                <value>
                    <fullName>Life Estate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property_State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_States__c</fullName>
        <label>Property_State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Status__c</fullName>
        <label>Property Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Listed For Sale</fullName>
                </value>
                <value>
                    <fullName>Pending Sale</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>2nd Home/Vacation</fullName>
                </value>
                <value>
                    <fullName>Subject Property</fullName>
                </value>
                <value>
                    <fullName>Co-signor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Title_is_Held_in_These_Names__c</fullName>
        <label>Property Title is Held in These Names</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Co-operative</fullName>
                </value>
                <value>
                    <fullName>Two-to-four unit property</fullName>
                </value>
                <value>
                    <fullName>Multifamily (more than 4 units)</fullName>
                </value>
                <value>
                    <fullName>Manufactured/Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Commercial – Non-Residential</fullName>
                </value>
                <value>
                    <fullName>Mixed Use – Residential</fullName>
                </value>
                <value>
                    <fullName>Farm</fullName>
                </value>
                <value>
                    <fullName>Home and Business Combined</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                    <isActive>false</isActive>
                    <label>Investment</label>
                </value>
                <value>
                    <fullName>Primary</fullName>
                    <isActive>false</isActive>
                    <label>Primary</label>
                </value>
                <value>
                    <fullName>Second Home</fullName>
                    <isActive>false</isActive>
                    <label>Second Home</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_ZIP__c</fullName>
        <label>Property_ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Liability__c</fullName>
        <label>Real_Estate_Schedule (RES) Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Taxes_Monthly__c</fullName>
        <label>Real Estate Taxes - Monthly</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RelatedClient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RelatedClient</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Liabilities</relationshipLabel>
        <relationshipName>Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedLoan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RelatedLoan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Liabilities</relationshipLabel>
        <relationshipName>Liabilities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemainingMonths__c</fullName>
        <description>To auto calculate remaining months</description>
        <formula>CEILING(Liability_Unpaid_Balance__c  /  Liability_Monthly_Payment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RemainingMonths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_months__c</fullName>
        <description>Must not be less than 0</description>
        <label>Remaining months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Mandatory if Real Estate Schedule is selected in the category</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Liability Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collections/Judgments/Liens</fullName>
                </value>
                <value>
                    <fullName>Home Equity Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Lease Payments</fullName>
                </value>
                <value>
                    <fullName>Mortgage Loans</fullName>
                </value>
                <value>
                    <fullName>Open 30 day Charge Accounts</fullName>
                </value>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>Mechanic Lien</fullName>
                </value>
                <value>
                    <fullName>Property Taxes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Mandatory if Real Estate Schedule is selected in the category</description>
        <inlineHelpText>Must have only digits or can have one hyphen(-)</inlineHelpText>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <description>Liability object</description>
    <label>Liability</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Liability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Liabilities</fullName>
        <columns>Liability_Unpaid_Balance__c</columns>
        <columns>NAME</columns>
        <columns>RelatedClient__c</columns>
        <columns>RelatedLoan__c</columns>
        <columns>Liability_Category__c</columns>
        <columns>Liability_Type__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Liabilities</label>
    </listViews>
    <sharingReasons>
        <fullName>LoanProcessor__c</fullName>
        <label>Loan Processor</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Loan_Officer__c</fullName>
        <label>Loan Officer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Origination_Loan_Officer__c</fullName>
        <label>Origination Loan Officer</label>
    </sharingReasons>
    <validationRules>
        <fullName>Address_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Address__c = '',
OR(ISPICKVAL (Liability_Category__c, "Real Estate Schedule")))</errorConditionFormula>
        <errorDisplayField>Address__c</errorDisplayField>
        <errorMessage>Address mandatory for this category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Amount__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Amount must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(City__c = '',
OR(ISPICKVAL (Liability_Category__c, "Real Estate Schedule")))</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>Mandatory for this category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>County_validations</fullName>
        <active>false</active>
        <errorConditionFormula>AND(County__c = '',
OR(ISPICKVAL (Liability_Category__c, "Real Estate Schedule")))</errorConditionFormula>
        <errorDisplayField>County__c</errorDisplayField>
        <errorMessage>County is mandatory for this category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gross_Rental_Income_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Gross_Rental_Income__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Gross_Rental_Income__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Insurance_Taxes_etc_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Insurance_Taxes_etc__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Insurance_Taxes_etc__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Job_Related_Expenses_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Job_Related_Expenses__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Job_Related_Expenses__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Liability_Monthly_Payment_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Liability_Monthly_Payment__c  &gt; 0)</errorConditionFormula>
        <errorDisplayField>Liability_Monthly_Payment__c</errorDisplayField>
        <errorMessage>Liability Monthly Payment value must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Liability_Unpaid_Balance_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Liability_Unpaid_Balance__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Liability_Unpaid_Balance__c</errorDisplayField>
        <errorMessage>Unpaid balance must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mortgage_Liens_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Mortgage_Liens__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Mortgage_Liens__c</errorDisplayField>
        <errorMessage>Must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mortgage_Payments_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Mortgage_Payments__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Mortgage_Payments__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Net_Rental_Income_RealEstate_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Net_Rental_Income_RealEstate__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Net_Rental_Income_RealEstate__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Present_Mortgage_Value_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Present_Mortgage_Value__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Present_Mortgage_Value__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remaining_months_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Remaining_months__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Remaining_months__c</errorDisplayField>
        <errorMessage>Must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( OR(), NOT(REGEX(Zip__c , "\\d{5}(-\\d{4})?")))</errorConditionFormula>
        <errorDisplayField>Zip__c</errorDisplayField>
        <errorMessage>Zip Can  contain numbers and hypen(-)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_validation_for_mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Zip__c ='',
OR(ISPICKVAL(Liability_Category__c, "Real Estate Schedule")))</errorConditionFormula>
        <errorDisplayField>Zip__c</errorDisplayField>
        <errorMessage>Mandatory for this category</errorMessage>
    </validationRules>
</CustomObject>